[gd_scene load_steps=3 format=3 uid="uid://bl21wtvdw4q8w"]

[ext_resource type="Script" path="res://audio_collider.gd" id="1_asgov"]
[ext_resource type="AudioStream" uid="uid://dqvyplvqqnek1" path="res://sine1.sfxr" id="2_2eauf"]

[node name="AudioCollider" type="Node2D"]
rotation = 7991.57
script = ExtResource("1_asgov")
length = 124.665

[node name="ConnectorLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, -124.665)
width = 2.0
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
metadata/_edit_lock_ = true

[node name="CollideArea" type="Area2D" parent="."]
position = Vector2(0, -124.665)
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CollideArea"]
polygon = PackedVector2Array(-8, -8, 0, -8, 8, -8, 16, 0, 8, 8, -8, 8, -16, 0)
metadata/_edit_lock_ = true

[node name="ColliderLine" type="Line2D" parent="CollideArea"]
points = PackedVector2Array(-8, -8, 0, -8, 8, -8, 16, 0, 8, 8, -8, 8, -16, 0)
closed = true
width = 2.0
joint_mode = 2
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CollideArea"]
stream = ExtResource("2_2eauf")
volume_db = -7.866
pitch_scale = 0.643444
metadata/_edit_lock_ = true

[connection signal="area_entered" from="CollideArea" to="." method="_on_collide_area_area_entered"]
[connection signal="input_event" from="CollideArea" to="." method="_on_collide_area_input_event"]
